--- a/python-opcua-server/Dockerfile
+++ b/python-opcua-server/Dockerfile
@@ -6,7 +6,8 @@ RUN useradd --create-home --home /home/opc --shell /bin/bash --uid 1001 --user-g
 USER opc
 RUN mkdir /home/opc/python
 COPY --chown=opc:opc ./server.py /home/opc/python/
+COPY --chown=opc:opc ./logger_conf.yml /home/opc/python/
 WORKDIR /home/opc/python
 
-#CMD ["/bin/bash", "-c", "sleep 1000000000"]
-CMD ["python", "server.py"]
+CMD ["/bin/bash", "-c", "sleep 1000000000"]
+#CMD ["python", "server.py"]
